2010-10-21  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_config.php: fixed the change the flag tconfig
	"can_block_policies", now the operation is between policy semaphore.
	
	Fixes: #3091940

	* include/functions_db.php: fixed the save user IP when the $config don't
	load this var yet.
	
	* include/functions_networkmap.php: fixed the translation call function when
	the pandora don't load the function.

2010-10-21  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_config.php: added check tconfig parameter
	"can_block_policies" in functions.
	
	Pending task: #3080762
	
	* operation/agentes/ver_agente.php: added hook enterprise the tab policy.
	
	Pending task: #3080762

	* include/functions_ui.php, operation/agentes/estado_monitores.php: cleaned
	source code style.

2010-10-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/servers/manage_export_form.php
	godmode/servers/manage_recontask.php
	godmode/servers/manage_recontask_form.php: Improved and fixed
	little bugs into the custom recon scripts interface

2010-10-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Clean the code

2010-10-20  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql
	extras/pandoradb_migrate_v3.1_to_v3.2.sql: TEXT type for some fields
	with small length now with the HTML encoding.

2010-10-20  Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/servers/modificar_server.php: Disable change name of server
	because it will be trouble updating server status.

	Fixes: #3091297

2010-10-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed jquery clone 
	function incompatibility with iexplorer for bug 3090389

2010-10-20  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_enable_disable_alerts.php: Improved template
	selection to be selected more than one. Added agent selection. (It can
	also be selected more than one.)
