@@ -1,3 +1,9 @@
+2010-10-22  Junichi Satoh  <junichi@rworks.jp>
+
+	* godmode/massive/massive_standby_alerts.php: Improved template
+	selection to be selected more than one. Added agent selection. (It can
+	also be selected more than one.)
+
 2010-10-21  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* include/functions_config.php: fixed the change the flag tconfig
